--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -51,10 +51,11 @@ block content
         | Pre-registration opens soon!
         br 
         | Interested in presenting? 
-        a(href='button btn') Submit a Talk
+        a.button.btn(href='https://docs.google.com/forms/d/e/1FAIpQLScKREjbbox6ZQDAKw7s14g8GuPgXISUMHVI1RGYNuWUOsEYRg/viewform?vc=0&c=0&w=1') Submit a Talk
       p.presented-by 
         | Presented by
-        img(src='/img/kotesol-logo.png')
+        a(href="https://koreatesol.org")
+          img(src='/img/kotesol-logo.png')
   include partials/whatis
 
   section.page-section.keypts
