--- a/server/views/layout/includes/call.pug
+++ b/server/views/layout/includes/call.pug
@@ -1,4 +1,5 @@
 .call-to-action
   h2.call-title Call for Speakers
   p Interested in presenting? Fill out our speaker form. 
-  a.button.btn.right.big Submit a Talk
+  a.button.btn.right.big(href='https://docs.google.com/forms/d/e/1FAIpQLScKREjbbox6ZQDAKw7s14g8GuPgXISUMHVI1RGYNuWUOsEYRg/viewform?vc=0&c=0&w=1') 
+    | Submit a Talk
