--- a/server/views/partials/schedule-table.pug
+++ b/server/views/partials/schedule-table.pug
@@ -22,37 +22,43 @@
     tr.room1
       td.schedule-track Track 1
       td.schedule-session
-        a(href='/speakers/Jeffrey_Shelley') Anthropology: Building a Class Culture with Impact
+        a(href='/speakers/Jeffrey_Shelley') Anthropology: Building a Class Culture with Impact 
+          i.fas.fa-external-link-alt
       td.schedule-speaker J. Shea Lee
       td.schedule-venue 103
     tr.room2
       td.schedule-track Track 2
       td.schedule-session
-        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist
+        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist 
+          i.fas.fa-external-link-alt
       td.schedule-speaker Paul Johnson
       td.schedule-venue 104
     tr.room3
       td.schedule-track Track 3
       td.schedule-session
-        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist
+        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist 
+          i.fas.fa-external-link-alt
       td.schedule-speaker Paul Johnson
       td.schedule-venue 201
     tr.room4
       td.schedule-track Track 4
       td.schedule-session
-        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist
+        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist 
+          i.fas.fa-external-link-alt
       td.schedule-speaker Paul Johnson
       td.schedule-venue 202
     tr.room5
       td.schedule-track Track 5
       td.schedule-session
-        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist
+        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist 
+          i.fas.fa-external-link-alt
       td.schedule-speaker Paul Johnson
       td.schedule-venue 203
     tr.room6
       td.schedule-track Track 6
       td.schedule-session
-        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist
+        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist 
+          i.fas.fa-external-link-alt
       td.schedule-speaker Paul Johnson
       td.schedule-venue 204
     //- 11:00
@@ -65,37 +71,43 @@
     tr.room1
       td.schedule-track Track 1
       td.schedule-session
-        a(href='/speakers/Jeffrey_Shelley') Anthropology: Building a Class Culture with Impact
+        a(href='/speakers/Jeffrey_Shelley') Anthropology: Building a Class Culture with Impact 
+          i.fas.fa-external-link-alt 
       td.schedule-speaker J. Shea Lee
       td.schedule-venue 103
     tr.room2
       td.schedule-track Track 2
       td.schedule-session
-        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist
+        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist 
+          i.fas.fa-external-link-alt
       td.schedule-speaker Paul Johnson
       td.schedule-venue 104
     tr.room3
       td.schedule-track Track 3
       td.schedule-session
-        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist
+        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist 
+          i.fas.fa-external-link-alt
       td.schedule-speaker Paul Johnson
       td.schedule-venue 201
     tr.room4
       td.schedule-track Track 4
       td.schedule-session
-        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist
+        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist 
+          i.fas.fa-external-link-alt
       td.schedule-speaker Paul Johnson
       td.schedule-venue 202
     tr.room5
       td.schedule-track Track 5
       td.schedule-session
-        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist
+        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist 
+          i.fas.fa-external-link-alt
       td.schedule-speaker Paul Johnson
       td.schedule-venue 203
     tr.room6
       td.schedule-track Track 6
       td.schedule-session
-        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist
+        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist 
+          i.fas.fa-external-link-alt
       td.schedule-speaker Paul Johnson
       td.schedule-venue 204
     //- Lunch (12:00)
@@ -108,7 +120,8 @@
     tr.main-event
       td.schedule-time 1:00 pm
       td.schedule-track Plenary Session
-      td.schedule-session Teacher Identity in Language Teaching
+      td.schedule-session Teacher Identity in Language Teaching 
+        i.fas.fa-external-link-alt
       td.schedule-speaker Jack C. Richards
       td.schedule-venue Onnuri Hall
     //- 2:00
@@ -121,19 +134,22 @@
     tr.room1
       td.schedule-track Track 1
       td.schedule-session
-        a(href='/speakers/Jeffrey_Shelley') Anthropology: Building a Class Culture with Impact
+        a(href='/speakers/Jeffrey_Shelley') Anthropology: Building a Class Culture with Impact 
+          i.fas.fa-external-link-alt
       td.schedule-speaker J. Shea Lee
       td.schedule-venue 103
     tr.room2
       td.schedule-track Track 2
       td.schedule-session
-        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist
+        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist 
+          i.fas.fa-external-link-alt
       td.schedule-speaker Paul Johnson
       td.schedule-venue 104
     tr.room3
       td.schedule-track Track 3
       td.schedule-session
-        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist
+        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist 
+          i.fas.fa-external-link-alt
       td.schedule-speaker Paul Johnson
       td.schedule-venue 201
     tr.room4
@@ -145,13 +161,15 @@
     tr.room5
       td.schedule-track Track 5
       td.schedule-session
-        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist
+        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist 
+          i.fas.fa-external-link-alt
       td.schedule-speaker Paul Johnson
       td.schedule-venue 203
     tr.room6
       td.schedule-track Track 6
       td.schedule-session
-        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist
+        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist 
+          i.fas.fa-external-link-alt
       td.schedule-speaker Paul Johnson
       td.schedule-venue 204
     //- 3:00
@@ -164,37 +182,43 @@
     tr.room1
       td.schedule-track Track 1
       td.schedule-session
-        a(href='/speakers/Luis_Caballero') Using Critical Pedagogy in the EFL Classroom
+        a(href='/speakers/Luis_Caballero') Using Critical Pedagogy in the EFL Classroom 
+          i.fas.fa-external-link-alt
       td.schedule-speaker Luis Caballero
       td.schedule-venue 103
     tr.room2
       td.schedule-track Track 2
       td.schedule-session
-        a(href='/speakers/Rhea_Metituk') Integration Station &ndash; Increasing Student Talking time &amp; Spicing up the Classroom
+        a(href='/speakers/Rhea_Metituk') Integration Station &ndash; Increasing Student Talking time &amp; Spicing up the Classroom 
+          i.fas.fa-external-link-alt
       td.schedule-speaker Rhea Metituk
       td.schedule-venue 104
     tr.room3
       td.schedule-track Track 3
       td.schedule-session
-        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist
+        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist 
+          i.fas.fa-external-link-alt
       td.schedule-speaker Paul Johnson
       td.schedule-venue 201
     tr.room4
       td.schedule-track Track 4
       td.schedule-session
-        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist
+        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist 
+          i.fas.fa-external-link-alt
       td.schedule-speaker Paul Johnson
       td.schedule-venue 202
     tr.room5
       td.schedule-track Track 5
       td.schedule-session
-        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist
+        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist 
+          i.fas.fa-external-link-alt
       td.schedule-speaker Paul Johnson
       td.schedule-venue 203
     tr.room6
       td.schedule-track Track 6
       td.schedule-session
-        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist
+        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist 
+          i.fas.fa-external-link-alt
       td.schedule-speaker Paul Johnson
       td.schedule-venue 204
     //- 4:00
@@ -207,37 +231,43 @@
     tr.room1
       td.schedule-track Track 1
       td.schedule-session
-        a(href='/speakers/Maria_Lisak') Snowstorms &amp; Cheatsheets - End of Term Reflection
+        a(href='/speakers/Maria_Lisak') Snowstorms &amp; Cheatsheets - End of Term Reflection 
+          i.fas.fa-external-link-alt
       td.schedule-speaker Maria Lisak
       td.schedule-venue 103
     tr.room2
       td.schedule-track Track 2
       td.schedule-session
-        a(href='/speakers/Aaron_Snowberger') Atomic Habits that will turn you into a Superhero
+        a(href='/speakers/Aaron_Snowberger') Atomic Habits that will turn you into a Superhero 
+          i.fas.fa-external-link-alt
       td.schedule-speaker Aaron Snowberger
       td.schedule-venue 104
     tr.room3
       td.schedule-track Track 3
       td.schedule-session
-        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist
+        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist 
+          i.fas.fa-external-link-alt
       td.schedule-speaker Paul Johnson
       td.schedule-venue 201
     tr.room
       td.schedule-track Track 4
       td.schedule-session
-        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist
+        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist 
+          i.fas.fa-external-link-alt
       td.schedule-speaker Paul Johnson
       td.schedule-venue 202
     tr.room
       td.schedule-track Track 5
       td.schedule-session
-        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist
+        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist 
+          i.fas.fa-external-link-alt
       td.schedule-speaker Paul Johnson
       td.schedule-venue 203
     tr.room
       td.schedule-track Track 6
       td.schedule-session
-        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist
+        a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist 
+          i.fas.fa-external-link-alt
       td.schedule-speaker Paul Johnson
       td.schedule-venue 204
     //- Closing
