--- a/server/views/layout/includes/html-head.pug
+++ b/server/views/layout/includes/html-head.pug
@@ -10,4 +10,4 @@ link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Nunito:200,2
 link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700,700i' type='text/css')
 link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,700,700i' type='text/css')
 link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Kanit:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i' type='text/css')
-link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css' type='text/css')
+link(rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.2/css/all.css' type='text/css')
