[feat] Add Plenary functionality, pageIds, and style Speaker Grid

--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -51,7 +51,7 @@ block content
         | Pre-registration opens soon!
         br 
         | Interested in presenting? 
-        a.button.btn(href='https://docs.google.com/forms/d/e/1FAIpQLScKREjbbox6ZQDAKw7s14g8GuPgXISUMHVI1RGYNuWUOsEYRg/viewform?vc=0&c=0&w=1') Submit a Talk
+        a(href='https://docs.google.com/forms/d/e/1FAIpQLScKREjbbox6ZQDAKw7s14g8GuPgXISUMHVI1RGYNuWUOsEYRg/viewform?vc=0&c=0&w=1') Submit a Talk
       p.presented-by 
         | Presented by
         a(href="https://koreatesol.org")
