--- a/server/views/partials/whatis.pug
+++ b/server/views/partials/whatis.pug
@@ -2,11 +2,21 @@ section.whatis
   .container.small
     dl.whatiskotesol
       dt
-        h2.section-title What is KOTESOL?
+        img.section-title(src='/design/web/kotesol-natcon-2019-logo-600x165.png')
+      dd
+        p 
+          | The English language teaching context is in constant flux, with our students' 
+          | focus on technology seemingly reducing their attention span, the rapid change 
+          | in student number with the low birth rate in Korea, and other factors within 
+          | and beyond our control. How can we as teachers, administrators, parents, and 
+          | members of the public take action to improve learner motivation to learn English?
+      dt
+        img.section-title(src='./img/kotesol-logo.png')
       dd
         p
           | Korea TESOL is a non-profit, professional organization that
           | seeks to assist teachers in self-development and improve
-          | English Language Teaching in Korea. At the JNJ Regional
+          | English Language Teaching in Korea. At the 2019 KOTESOL National
           | Conference, prepare to &quot;Learn - Share - Succeed.&quot;
-          | #31167f, #371E83 &rarr; bluer #232377
+          br
+          //- | #31167f, #371E83 &rarr; bluer #232377
