--- a/server/views/speaker-single.pug
+++ b/server/views/speaker-single.pug
@@ -2,7 +2,7 @@
 //- Page: Speaker Single
 extends layout/index
 block content
-  .container
+  .container.small
     h2.section-title Meet our Speakers
     // http://davist11.github.io/css-diamond-grid/#
     article.speaker
