--- a/public/css/new-style.css
+++ b/public/css/new-style.css
@@ -363,6 +363,11 @@ p {
   opacity: 0.8;
 }
 
+em {
+  opacity: 0.6;
+  font-weight: 100;
+}
+
 @media screen and (min-width: 36rem) {
   p, li {
     font-size: 1.1rem;
@@ -389,7 +394,32 @@ h2.section-title {
   margin-bottom: 2rem;
   font-size: 2.5rem;
   text-align: center;
+  /* font-weight: normal;
+  color: #00f2e6; */
 }
+
+/* h2.section-title:before,
+h2.section-title:after {
+  content: "";
+  display: block;
+  width: 100px;
+  height: 3px;
+  background: #00f2e6;
+  position: absolute;
+  top: 1.75rem;
+  left: 25%;
+} */
+
+/* h2.section-title:after {
+  content: "";
+  display: block;
+  width: 400px;
+  height: 3px;
+  background: #00f2e6;
+  position: absolute;
+  top: 1.75rem;
+  left: 25%;
+} */
 
 h3 {
   font-size: 1.8rem;
@@ -443,11 +473,18 @@ hr {
 	margin-bottom: 1.5em;
 }
 
+hr.accent {
+  height: 0.5px;
+  background-color: rgba(0, 242, 230, 0.2);
+}
+
 /*--------------------------------------------------------------
 # Lists
 --------------------------------------------------------------*/
 ul, ol {
   padding-left: 1rem;
+  opacity: 0.8;
+  font-weight: 300;
 }
 
 @media screen and (min-width: 36rem) {
@@ -483,7 +520,7 @@ li {
   color: white;
   position: absolute;
   top: -110px;
-  width: 100vw;
+  width: 100%;
   height: 110px;
   padding-left: 2rem;
   padding-right: 2rem;
@@ -517,14 +554,14 @@ li {
 .site-banner {
   position: fixed;
   top: 0;
-  width: 100vw;
+  width: 100%;
   background: #201b48;
   /* font-weight: bold; */
   /* text-align: right; */
   color: white;
-  /* height: 65px; */
+  height: 65px;
   z-index: 100;
-  /* margin-bottom: 65px; */
+  margin-bottom: 65px;
   /* border-bottom: 5px solid #00f2e6; */
   box-shadow: 0px 1px 4px rgba(0,0,0,0.14);
 }
@@ -629,7 +666,7 @@ li {
 
 .banner-right {
   text-align: right;
-  transform: translateY(15%);
+  transform: translateY(18%);
 }
 
 .site-banner a {
@@ -678,7 +715,7 @@ li {
   position: fixed;
   top: 63px;
   right: 0rem;
-  width: 100vw;
+  width: 100%;
   height: 100%;
   z-index: 20;
   background: rgba(32,27,72,0.9);
@@ -723,9 +760,10 @@ li {
 
 .site-menu .container {
   position: absolute;
-  top: 50vw;
   left: 50%;
-  transform: translate(-50%, -50%);
+  top: 5rem;
+  transform: translateX(-50%);
+  /* bottom: 0; */
 }
 
 .site-mobile-menu-button {
@@ -1012,14 +1050,16 @@ body {
 /*   padding-bottom: 6rem; */
   margin: 0;
   position: relative;
-  width: 100vw; 
+  width: 100%; 
+  max-height: 1500px;
   /* height: 50vw; */
   overflow: hidden;
 }
 
 .hero:after {
   display: block;
-  position: relative;
+  position: absolute;
+  bottom: 0;
   background-image: linear-gradient(to bottom, transparent 0%, #371e83 100%);
   margin-top: -50vw;
   height: 50vw;
@@ -1043,7 +1083,7 @@ body {
   position: absolute;
   color: #004369;
   text-align: center;
-  width: 100vw;
+  width: 100%;
   font-size: 8rem;
   top: 0rem;
 }
@@ -1403,8 +1443,9 @@ a.ticket-button {
 }
 
 .speakers .grid {
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-  padding: 1rem;
+  /* grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr; */
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+  padding: 1rem 2rem 4rem;
   justify-content: center;
 }
 
@@ -1430,7 +1471,7 @@ a.ticket-button {
   text-align: center;
   width: 100%;
   height: 100%;
-  background: transparent;
+  background: linear-gradient(0deg, rgba(23,23,37,1) 0%, rgba(255,255,255,0) 50%);
 }
 
 .speaker-meta {
@@ -1441,6 +1482,26 @@ a.ticket-button {
   /* margin: auto; */
 /*   color: white; */
     /* visibility: hidden; */
+}
+
+.speaker-meta-visible {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  z-index: 30;
+  text-align: left;
+  padding: 0 1rem 1rem;
+}
+
+.speaker-meta-visible p {
+  margin-bottom: 0;
+}
+
+.speaker-meta-visible .speaker-name {
+  color: white;
+  font-family: "Open Sans Condensed";
+  font-weight: bold;
+  text-transform: uppercase;
 }
 
 .grid-item:hover .speaker-meta {
@@ -1475,7 +1536,7 @@ a.ticket-button {
 }
 
 .grid-item.photo:hover .speaker-meta-box {
-    background: rgba(255,255,255,0.6);
+    background: rgba(23,23,37,0.6);
 }
 
 .grid-item.photo:hover .speaker-meta {
@@ -1524,13 +1585,13 @@ clip-path: polygon(0 0%, 100% 0, 100% 100%, 0 100%);
   font-weight: bold;
 }
 
-.svg-container {
+/* .svg-container {
     margin-bottom: 0px;
     position: absolute;
     bottom: 0;
     width: 100%;
 /*     height: 0; */
-    /*padding-top: 7.93650794%;*/
+    /*padding-top: 7.93650794%;
 }
 
 .header-svg {
@@ -1565,7 +1626,7 @@ clip-path: polygon(0 0%, 100% 0, 100% 100%, 0 100%);
 .map-svg {
   z-index: 3;
   top: -5px;
-}
+} */
 
 /**
  * -----------------------------------------------------------------------------
@@ -2157,7 +2218,7 @@ clip-path: polygon(0 0%, 100% 0, 100% 100%, 0 100%);
   margin-top: -11%; */
   width: 100%;
   min-width: 200px;
-  height: 260px;
+  height: 300px;
   /* max-height: 240px; */
   overflow: hidden;
   transition: all 0.3s;
@@ -2180,9 +2241,9 @@ clip-path: polygon(0 0%, 100% 0, 100% 100%, 0 100%);
 } */
 
 .grid-item:hover {
-  background: #FFF;
+  /* background: #a0f; */
   /* border: 1px solid #00f2e6; */
-  cursor: pointer;
+  /* cursor: pointer; */
 }
 
 .grid-inner {
@@ -2199,11 +2260,19 @@ clip-path: polygon(0 0%, 100% 0, 100% 100%, 0 100%);
   text-align: center;
   /* padding-top: 40%; */
   font-size: 1.2em;
+  filter: grayscale(1);
+}
+
+.grid-inner > a {
+  width: 100%;
+  height: 100%;
+  display: block;
 }
 
 .grid-item:hover .grid-inner {
   transform: scale(1.1);
   transition: all 0.3s;
+  filter: grayscale(0);
 }
 
 .grid-title {
@@ -4134,12 +4203,13 @@ h4.sponsor-section-title {
   background: #0f0f30;
   justify-content: space-between;
   padding: 0.5rem 2rem 0.5rem 1rem;
+  height: 100%;
 }
 .header-top h1 {
   display: inline-block;
   font-size: 1.95rem;
   font-weight: 500;
-  margin-top: 2px;
+  margin-top: 0.45rem;
 }
 
 
