--- a/server/views/layout/includes/header.pug
+++ b/server/views/layout/includes/header.pug
@@ -6,11 +6,11 @@ include call
   header
     .header-top
       h1
-        span.screen-reader-text 2019 KOTESOL 
-        | National Conference
+        span.screen-reader-text KOTESOL 
+        | 2019 National Conference
       .banner-right
         p.banner-location
-          | May 18, 2019 / 10am
+          | May 25, 2019 / 9am
           br
           a(href='/location') Jeonju
         .top-buttons
