[fix] Fix Privacy, Speaker pages, and add Page header sections

--- a/server/views/location.pug
+++ b/server/views/location.pug
@@ -1,5 +1,9 @@
 //- Page: Location
 extends layout/index
 block content
+  section.page-section
+    .container
+      h2.section-title Location
+      p.section-subtitle.center Our venue for 2019 is located in the food capital of Korea, Jeonju.
   include partials/directions
   include partials/map
