--- a/server/views/notfound.pug
+++ b/server/views/notfound.pug
@@ -1,6 +1,11 @@
 //- Page: Not Found (404)
 extends layout/index
 block content
-  section.page-section.container
-    h1 404
-    h2 Page not found.
+  section.page-section
+    .container
+      h2.section-title Not Found
+      p.section-subtitle.center We&apos;ve got a ticket for everyone. Which one for you?
+  section.page-section
+    .container.small
+      h1 404
+      h2 Page not found.
