--- a/server/views/speakers.pug
+++ b/server/views/speakers.pug
@@ -1,6 +1,10 @@
 //- Page: Speakers
 extends layout/index
 block content
-  include partials/speaker-grid 
-  include partials/speaker-single 
+  //- include partials/speaker-grid 
+  //- include partials/speaker-single 
+  section.page-section
+    .container
+      h2.section-title Speakers
+      p.section-subtitle.center Big names, Bigger ideas
   include partials/speaker-list
