--- a/server/views/sponsors.pug
+++ b/server/views/sponsors.pug
@@ -1,9 +1,12 @@
 //- Page: Sponsors
 extends layout/index
 block content
+  section.page-section
+    .container
+      h2.page-section-title Our sponsoring partners
+      p.section-subtitle.center Let's grow together.
   section.page-section.sponsors.gradient
   .container.small
-    h2.page-section-title Our sponsoring partners
     p
       | If you&apos;re interested in becoming a sponsoring partner, we&apos;d 
       a(href='mailto:jnjconference@gmail.com') love to chat
