--- a/server/views/team.pug
+++ b/server/views/team.pug
@@ -1,4 +1,8 @@
 //- Page: Team
 extends layout/index
 block content
+  section.page-section
+    .container
+      h2.section-title About the Organizing Committee
+      p.section-subtitle.center This conference wouldn't be possible without the dedicated time and energy of these wonderful people.
   include partials/team-list
