--- a/server/views/conduct.pug
+++ b/server/views/conduct.pug
@@ -1,38 +1,39 @@
 //- Page: Code of Conduct
 extends layout/index
 block content
+  section.page-section
+    .container
+      h2.section-title Code of Conduct
+      p.section-subtitle.center We take our code of conduct very seriously &amp; you should too.
   section.page-section.conduct
-  .container.small
-    h2.section-title Code of Conduct
-    div(style='background: white')
-      p We take our code of conduct very seriously &amp; you should too.
-      p
-        | All attendees, speakers, sponsors, and volunteers for KOTESOL are required to agree to the event code of conduct. Organizers will enforce this code throughout the event. We are expecting cooperation from all participants to establish a safe environment for all.
-      h4 Need Help?
-      p Find a volunteer or organizer with a KOTESOL name badge or sash and let us know.
-      h4 The Quick Version
-      p
-        | We are dedicated to provide a harassment-free conference experience for everyone, regardless of gender, sexual orientation, disability, physical appearance, body size, race, or religion. We do not tolerate harassment of conference participants in any form. Sexual language and imagery is not appropriate for any conference venue, including talks, workshops, parties, Twitter and other online media. Conference participants violating these rules may be sanctioned or expelled from the conference without a refund at the discretion of the conference organizers.
-      h4 The Less Quick Version
-      p
-        | Harassment includes offensive verbal comments related to gender, sexual orientation, disability, physical appearance, body size, race, religion, sexual images in public spaces, deliberate intimidation, stalking, following, harassing photography or recording, sustained disruption of talks or other events, inappropriate physical contact, and unwelcome sexual attention.
-      p
-        | Participants asked to stop any harassing behaviour are expected to comply immediately.
-      p
-        | Sponsors are also subject to the anti-harassment policy. In particular, sponsors should not use sexualized images, activities, or other material. Booth staff (including volunteers) should not use sexualized clothing/uniforms/costumes, or otherwise create a sexualized environment.
-      p
-        | If a participant engages in harassing behaviour, the conference organizers may take any action they deem appropriate, including warning the offender or expulsion from the conference with no refund.
-      p
-        | If you are being harassed, notice that someone else is being harassed, or have any other concerns, please contact a member of conference staff immediately. Conference staff can be identified as they&apos;ll be wearing branded volunteer buttons.
-      p
-        | Conference staff will be happy to help participants contact hotel/venue security or local law enforcement, provide escorts, or otherwise assist those experiencing harassment to feel safe for the duration of the conference. We value your attendance.
-      p
-        | We expect participants to follow these rules at conference and workshop venues and conference-related social events.
-      hr
-      p
-        | Original source and credit: 
-        a(href='http://2012.jsconf.us/#/about') http://2012.jsconf.us/#/about
-        |  &amp; The Ada Initiative
-        br
-        | This work is licensed under a 
-        a(href='https://creativecommons.org/licenses/by/3.0/') Creative Commons Attribution 3.0 Unported License
+    .container.small
+        p
+          | All attendees, speakers, sponsors, and volunteers for KOTESOL are required to agree to the event code of conduct. Organizers will enforce this code throughout the event. We are expecting cooperation from all participants to establish a safe environment for all.
+        h4 Need Help?
+        p Find a volunteer or organizer with a KOTESOL name badge or sash and let us know.
+        h4 The Quick Version
+        p
+          | We are dedicated to provide a harassment-free conference experience for everyone, regardless of gender, sexual orientation, disability, physical appearance, body size, race, or religion. We do not tolerate harassment of conference participants in any form. Sexual language and imagery is not appropriate for any conference venue, including talks, workshops, parties, Twitter and other online media. Conference participants violating these rules may be sanctioned or expelled from the conference without a refund at the discretion of the conference organizers.
+        h4 The Less Quick Version
+        p
+          | Harassment includes offensive verbal comments related to gender, sexual orientation, disability, physical appearance, body size, race, religion, sexual images in public spaces, deliberate intimidation, stalking, following, harassing photography or recording, sustained disruption of talks or other events, inappropriate physical contact, and unwelcome sexual attention.
+        p
+          | Participants asked to stop any harassing behaviour are expected to comply immediately.
+        p
+          | Sponsors are also subject to the anti-harassment policy. In particular, sponsors should not use sexualized images, activities, or other material. Booth staff (including volunteers) should not use sexualized clothing/uniforms/costumes, or otherwise create a sexualized environment.
+        p
+          | If a participant engages in harassing behaviour, the conference organizers may take any action they deem appropriate, including warning the offender or expulsion from the conference with no refund.
+        p
+          | If you are being harassed, notice that someone else is being harassed, or have any other concerns, please contact a member of conference staff immediately. Conference staff can be identified as they&apos;ll be wearing branded volunteer buttons.
+        p
+          | Conference staff will be happy to help participants contact hotel/venue security or local law enforcement, provide escorts, or otherwise assist those experiencing harassment to feel safe for the duration of the conference. We value your attendance.
+        p
+          | We expect participants to follow these rules at conference and workshop venues and conference-related social events.
+        hr
+        p
+          | Original source and credit: 
+          a(href='http://2012.jsconf.us/#/about') http://2012.jsconf.us/#/about
+          |  &amp; The Ada Initiative
+          br
+          | This work is licensed under a 
+          a(href='https://creativecommons.org/licenses/by/3.0/') Creative Commons Attribution 3.0 Unported License
