--- a/server/views/schedule.pug
+++ b/server/views/schedule.pug
@@ -1,5 +1,9 @@
 //- Page: Schedule
 extends layout/index
 block content
+  section.page-section
+    .container
+      h2.section-title Schedule
+      p.section-subtitle.center Explore the themes our speakers will discuss. From pedagogy to technology, there's a track for everyone.
   include partials/schedule-table
   include partials/speaker-grid
