--- a/server/views/speaker-single.pug
+++ b/server/views/speaker-single.pug
@@ -2,25 +2,30 @@
 //- Page: Speaker Single
 extends layout/index
 block content
-  .container.small
-    h2.section-title Meet our Speakers
-    // http://davist11.github.io/css-diamond-grid/#
-    article.speaker
-      .speaker-info-section
-        .speaker-photo-box
-          .speaker-photo(style=`background-image: url('/img/people/${speaker.img}')`)
-          .attendee-img-shadow
-          .attendee-img-shadow-yellow
-        .speaker-meta
-          p.speaker-name
-            a(href=`/speakers/${speaker.shortname}`)=speaker.name
-          p.speaker-affiliation=speaker.affiliation
-          p.speaker-session
-            strong Talk / 
-            a(href=`/speakers/${speaker.shortname}`)=speaker.title
-          p.speaker-abstract
-            !=speaker.abstract
-          .speaker-info
-            p.speaker-bio-title About #{speaker.nickname}
-            p.speaker-bio
-              !=speaker.bio
+  section.page-section
+    .container
+      h2.section-title= speaker.name
+      p.section-subtitle.center= speaker.affiliation
+  section.page-section
+    .container.small
+      h2.section-title Meet our Speakers
+      // http://davist11.github.io/css-diamond-grid/#
+      article.speaker
+        .speaker-info-section
+          .speaker-photo-box
+            .speaker-photo(style=`background-image: url('/img/people/${speaker.img}')`)
+            .attendee-img-shadow
+            .attendee-img-shadow-yellow
+          .speaker-meta
+            p.speaker-name
+              a(href=`/speakers/${speaker.shortname}`)=speaker.name
+            p.speaker-affiliation=speaker.affiliation
+            p.speaker-session
+              strong Talk / 
+              a(href=`/speakers/${speaker.shortname}`)=speaker.title
+            p.speaker-abstract
+              !=speaker.abstract
+            .speaker-info
+              p.speaker-bio-title About #{speaker.nickname}
+              p.speaker-bio
+                !=speaker.bio
