--- a/server/views/tickets.pug
+++ b/server/views/tickets.pug
@@ -2,10 +2,10 @@
 extends layout/index
 block content
   section.page-section
-  .container
-    h2.section-title Let&apos;s Make it Official
-    p.section-subtitle.center We&apos;ve got a ticket for everyone. Which one for you?
-  section.page-section.red-dot
+    .container
+      h2.section-title Let&apos;s Make it Official
+      p.section-subtitle.center We&apos;ve got a ticket for everyone. Which one for you?
+  section.page-section
     .container
       ul.ticket-grid
         li.center
